--- a/index.html
+++ b/index.html
@@ -10,18 +10,33 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
   </head>
 
   <body>
     <header>
-      <img src="Jauit logo.svg" alt="Jauit logo" />
+      <img src="./img/Jauit logo.svg" alt="Jauit logo" />
 
       <nav>
-        <a class="nav-link" href="#">About Us</a>
-        <a class="nav-link" href="#">Courses</a>
-        <a class="nav-link" href="#">Sponsors</a>
-        <a class="nav-link link-act" href="#">Apply Now</a>
+        <div class="nav-elements">
+          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="#">Courses</a>
+          <a class="nav-link" href="#">Sponsors</a>
+          <a class="nav-link link-act" href="#">Apply Now</a>
+        </div>
+        <div class="menu-icon">
+          <ion-icon name="menu-outline"></ion-icon>
+        </div>
       </nav>
+
+      <div class="modal hidden">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Sponsors</a></li>
+          <li><a href="#">Apply Now</a></li>
+        </ul>
+      </div>
     </header>
 
     <main>
@@ -37,7 +52,7 @@
           <button class="hero-btn">Apply Now</button>
         </div>
         <div class="hero-image">
-          <img src="Jauit Image.png" alt="Jauit Image" />
+          <img src="./img/Jauit Image.png" alt="Jauit Image" />
         </div>
       </section>
 
@@ -57,7 +72,7 @@
           </p>
         </div>
         <div class="hero-image">
-          <img src="Jauit Image2.png" alt="Jauit Image" />
+          <img src="./img/Jauit image2.png" alt="Jauit Image" />
         </div>
       </section>
 
@@ -66,7 +81,7 @@
         <div class="courses-container">
           <div class="container">
             <div class="jauit-icon">
-              <img src="web-dev-icon.svg" alt="webdev Icon" />
+              <img src="./img/web-dev-icon.svg" alt="webdev Icon" />
             </div>
             <h3 class="courses-heading">Web development</h3>
             <p class="text">
@@ -77,7 +92,7 @@
 
           <div class="container">
             <div class="jauit-icon">
-              <img src="productdesign.svg" alt="productdesign Icon" />
+              <img src="./img/productdesign.svg" alt="productdesign Icon" />
             </div>
             <h3 class="courses-heading">Product Design</h3>
             <p class="text">
@@ -87,7 +102,7 @@
           </div>
           <div class="container">
             <div class="jauit-icon">
-              <img src="marketing.svg" alt="marketing Icon" />
+              <img src="./img/marketing.svg" alt="marketing Icon" />
             </div>
             <h3 class="courses-heading">Digital Marketing</h3>
             <p class="text">
@@ -97,7 +112,7 @@
           </div>
           <div class="container">
             <div class="jauit-icon">
-              <img src="web3.svg" alt="we3 Icon" />
+              <img src="./img/web3.svg" alt="we3 Icon" />
             </div>
             <h3 class="courses-heading">Web3/ Blockchain Development</h3>
             <p class="text">
@@ -156,8 +171,8 @@
       <section class="sponsors">
         <h2 class="heading2 heading3">Sponsors</h2>
         <div class="logos">
-          <img src="skysenxe-logo.png" alt="skysenxe-logo" />
-          <img src="amalgam logo.png" alt="amalgam-logo" />
+          <img src="./img/skysenxe-logo.png" alt="skysenxe-logo" />
+          <img src="./img/amalgam logo.png" alt="amalgam-logo" />
         </div>
       </section>
 
@@ -172,10 +187,21 @@
         </div>
 
         <div class="footer2">
-          <img src="Jauit logo.svg" alt="" />
+          <img src="./img/Jauit logo.svg" alt="" />
           <p class="text">Email: hi@jauit.com</p>
         </div>
       </section>
     </main>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
